; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_core/extr_mlx5_pagealloc.c_mlx5_fwp_flush.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_core/extr_mlx5_pagealloc.c_mlx5_fwp_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_fw_page = type { i32, i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@BUS_DMASYNC_PREWRITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mlx5_fwp_flush(%struct.mlx5_fw_page* %0) #0 {
  %2 = alloca %struct.mlx5_fw_page*, align 8
  %3 = alloca i32, align 4
  store %struct.mlx5_fw_page* %0, %struct.mlx5_fw_page** %2, align 8
  %4 = load %struct.mlx5_fw_page*, %struct.mlx5_fw_page** %2, align 8
  %5 = getelementptr inbounds %struct.mlx5_fw_page, %struct.mlx5_fw_page* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  store i32 %6, i32* %3, align 4
  br label %7

7:                                                ; preds = %11, %1
  %8 = load i32, i32* %3, align 4
  %9 = add i32 %8, -1
  store i32 %9, i32* %3, align 4
  %10 = icmp ne i32 %8, 0
  br i1 %10, label %11, label %29

11:                                               ; preds = %7
  %12 = load %struct.mlx5_fw_page*, %struct.mlx5_fw_page** %2, align 8
  %13 = load i32, i32* %3, align 4
  %14 = zext i32 %13 to i64
  %15 = getelementptr inbounds %struct.mlx5_fw_page, %struct.mlx5_fw_page* %12, i64 %14
  %16 = getelementptr inbounds %struct.mlx5_fw_page, %struct.mlx5_fw_page* %15, i32 0, i32 2
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.mlx5_fw_page*, %struct.mlx5_fw_page** %2, align 8
  %22 = load i32, i32* %3, align 4
  %23 = zext i32 %22 to i64
  %24 = getelementptr inbounds %struct.mlx5_fw_page, %struct.mlx5_fw_page* %21, i64 %23
  %25 = getelementptr inbounds %struct.mlx5_fw_page, %struct.mlx5_fw_page* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* @BUS_DMASYNC_PREWRITE, align 4
  %28 = call i32 @bus_dmamap_sync(i32 %20, i32 %26, i32 %27)
  br label %7

29:                                               ; preds = %7
  ret void
}

declare dso_local i32 @bus_dmamap_sync(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
